# blackcat-rs

./: .gitignore  Cargo.toml  README.md
crate/argus/: .gitignore  Cargo.toml  README.md
crate/argus/src/: cert_util.rs  lib.rs  proxy.rs
crate/code-cave/: Cargo.toml
crate/code-cave/src/: lib.rs  main.rs  x64.rs
crate/maidism/: Cargo.toml  README.md
crate/maidism/examples/: basic_disassemble.rs
crate/maidism/src/: lib.rs
crate/mem-tools/: Cargo.toml  README.md
crate/mem-tools/src/: lib.rs
crate/mini-sRDI/: Cargo.toml  Makefile.toml  README.md
crate/mini-sRDI/shellcode/: Cargo.toml
crate/mini-sRDI/shellcode/.cargo/: config
crate/mini-sRDI/shellcode/src/: binding.rs  main.rs
crate/mini-sRDI/src/: main.rs
crate/payload-sample/: Cargo.toml
crate/payload-sample/src/: main.rs
crate/pe-tools/: Cargo.toml  README.md
crate/pe-tools/src/: lib.rs  main.rs  shared.rs  x64.rs  x86.rs
crate/process-hide/: Cargo.toml
crate/process-hide/src/: lib.rs  main.rs
crate/process-hollow/: Cargo.toml  README.md
crate/process-hollow/src/: lib.rs  main.rs  mem.rs  pe.rs
crate/reflective-dll-injection/: Cargo.toml
crate/reflective-dll-injection/src/: lib.rs
crate/reflective-dll-injection/src/dll/: dll64.rs  loader64.rs
crate/reflective-dll-injection/src/inject/: mod.rs  x64.rs
crate/thread-continue/: Cargo.toml
crate/thread-continue/src/dll/: dll64.rs  loader64.rs  mod.rs
crate/thread-continue/src/inject/: mod.rs  x64.rs
crate/wuhu/: Cargo.toml
crate/wuhu/src/: io.rs  lib.rs  mem.rs  prelude.rs  str.rs
crate/wuhu/tests/: str.rs
crate/yura/: Cargo.toml  README.md  build.rs
crate/yura/src/: com_utils.rs  global.rs  lib.rs  shared.rs
crate/yura/src/interface/: ICMLuaUtil.rs  IColorDataProxy.rs  IFileOperation.rs  mod.rs
crate/yura/src/methods/: com.rs
crate/yura/src/utils/: file_operation.rs  mod.rs
