[package]
name = "blackcat-rs"
version = "0.1.0"
authors = ["uru <mail@nyaa.gg>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "crate/code-cave",
    "crate/pe-tools",
    "crate/payload-sample",
    "crate/process-hide",
    "crate/process-hollow",
    "crate/reflective-dll-injection",
]
