[package]
name = "argus"
version = "0.1.0"
authors = ["uru <mail@nyaa.gg>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
async-dup = "1.2.2"
async-h1 = "2.3.2"
async-native-tls = "0.3.3"
async-std = "1.9.0"
async-tls = "0.11.0"
futures = "0.3.13"
http-types = "2.10.0"
openssl = "0.10.33"
rustls = "0.19.0"
webpki-roots = "0.21.1"
