[package]
name = "maidism"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
colored = "2.0.0"
iced-x86 = "1.11.1"
winapi = { version = "0.3.9", features = ["synchapi"] }
winproc = "0.6.4"
wuhu = { git = "https://github.com/2vg/blackcat-rs", package = "wuhu" }
