[package]
name = "process-hide"
version = "0.1.0"
authors = ["m0fqn"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
detour = "0.7.1"
minhook-sys = "0.1.1"
ntapi = "0.3.6"
winapi = { version = "0.3.9", features = ["libloaderapi", "minwindef"] }
