[package]
name = "process-hide"
version = "0.1.0"
authors = ["m0fqn"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
ntapi = "0.3.6"
winapi = { version = "0.3.9", features = ["libloaderapi", "minwindef", "winuser"] }
detour = "0.7.1"

[lib]
name = "hook_cat"
path = "src/lib.rs"
crate-type = ["dylib"]
