[package]
name = "process-hollow"
version = "0.1.0"
authors = ["uru <mail@nyaa.gg>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ntapi = "0.3.6"
winapi = { version = "0.3.9", features = ["fileapi", "handleapi", "memoryapi", "minwindef", "ntdef", "processthreadsapi", "winbase", "winnt"] }
anyhow = "1.0.38"
