[package]
name = "thread-continue"
version = "0.1.0"
authors = ["uru <mail@nyaa.gg>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pe-tools = { path = "../pe-tools" }
winapi = { version = "0.3.9", features = ["winuser"] }
ntapi = { version = "0.3.6", features = ["nightly"] }
anyhow = "1.0.39"

[lib]
name = "dll64"
crate-type = ["cdylib"]
