[package]
name = "wuhu"
version = "0.1.0"
authors = ["uru <mail@nyaa.gg>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.9", features = ["errhandlingapi", "memoryapi", "minwindef", "ntdef", "processthreadsapi", "winbase", "winnt"] }
num-traits = "0.2.14"
