[package]
name = "yura"
version = "0.1.0"
authors = ["uru <mail@nyaa.gg>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
ntapi = { version = "0.3.6", features = ["nightly"] }
winapi = { version = "0.3.9", features = ["combaseapi", "minwindef", "objbase", "objidl", "processthreadsapi", "shellapi", "shobjidl", "shobjidl_core", "winerror", "winnt"] }
windows = "0.7.0"
winreg = "0.8.0"

[build-dependencies]
windows = "0.7.0"
