[package]
name = "shellcode"
version = "0.1.0"
authors = ["uru <mail@nyaa.gg>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utf16_literal = { git = "https://github.com/thepowersgang/utf16_literal-rs" }

[profile.dev]
panic = "abort"
opt-level = "z"
lto = true

[profile.release]
panic = "abort"
opt-level = "z"
lto = true

[dependencies.num-traits]
version = "0.2"
default-features = false

[aa]
